--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,9 @@
+@mixin mobile{
+    @media screen and (max-width:480px) {
+        @content
+    }
+}
+
 .formContainer{
     background-color: #a7bcff;
     height: 100vh;
@@ -65,6 +71,8 @@
     }
 }
 
+
+
 .home{
     background-color: #a7bcff;
     height: 100vh;
@@ -78,11 +86,19 @@
         height: 80%;
         display: flex;
         overflow: hidden;
+        @include mobile{
+            width: 100%;
+            height: 100%;
+        }
     }
     .sidebar{
         flex: 1;
         // border-right: 1px solid #3e3c61;
         background-color: #3e3c61 ;
+        @include mobile{
+            width: 40%;
+            
+        }
         .navbar{
             display: flex;
             align-items: center;
@@ -91,18 +107,31 @@
             padding: 10px;
             justify-content: space-between;
             color: #ddddf7;
+            @include mobile{
+                height: 100px;
+            }
             .logo{
                 font-weight: bold;
+                @include mobile{
+                    display: none;
+                }
             }
             .user{
                 display: flex;
                 gap: 10px;
+                @include mobile{
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-around;
+
+                }
                 img{
                     background-color: #ddddf7;
                     height: 24px;
                     width: 24px;
                     border-radius: 50%;
                     object-fit: cover;
+                  
                 }
                 button{
                 background-color: #5d5b8d;
@@ -110,6 +139,9 @@
                 font-size: 10px;
                 border: none;
                 cursor: pointer;
+                @include mobile{
+                    font-size: 15px;
+                }
                 }
             }
           
@@ -123,9 +155,23 @@
                     border: none;
                     color: white;
                     outline: none;
-
+                    
                     &::placeholder{
                         color: lightgray;
+                    }
+                }
+                button{
+                    background-color: #8da4f1;
+                    margin-left: 30px;
+                    color: #ddddf7;
+                    font-size: 15px;
+                    border: none;
+                    cursor: pointer;
+                    @include mobile{
+                        margin-top: 30px;
+                        width: 100px;
+                        transform: translateX(-33px);
+                        font-size: 14px;
                     }
                 }
             }
@@ -168,6 +214,12 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
+           
+            span{
+                font-size: 20px;
+                color: white;
+                font-weight: 1000;
+            }
         }
         .chatIcons{
             display: flex;
@@ -183,6 +235,9 @@
         padding: 10px;
         height: calc(100% - 160px);
         overflow: scroll;
+        @include mobile{
+            height: calc(100% - 130px);
+        }
         .message{
             display: flex;
             gap: 20px;
@@ -238,6 +293,13 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        @include mobile{
+            .inputSend{
+                font-size: 13px;
+                color: black;
+            }
+        }
+        
         input{
             width: 100%;
             border: none;
@@ -262,6 +324,9 @@
                 color: white;
                 background-color: #8da4f1;
             }
+        }
+        .Send{
+            cursor: pointer;
         }
     }
 }
